# base

./: CMakeLists.txt  README.md
examples/: assignment_operators.json  bool_and_double.json  conditional_return.json  factorial.json  fibonacci.json  gotos.json  hello_world.json  int64.json  print_vector.json  structs.json  tuples.json  unary_operators.json
src/: super_ast.hpp
src/super_ast/: node.cpp  node.hpp  node_map.hpp  parser.cpp  parser.hpp  type.cpp  type.hpp  visitor.cpp  visitor.hpp
src/super_ast/analyzer/: grapher.cpp  printer.cpp  useless_conditionals.cpp
src/super_ast/node/: block.cpp  block.hpp  declaration.cpp  declaration.hpp  statement.cpp  statement.hpp  type.cpp  type.hpp  type_reference.cpp  type_reference.hpp
src/super_ast/node/declaration/: function.hpp  parameter.hpp  struct.hpp  variable.hpp
src/super_ast/node/statement/: conditional.cpp  conditional.hpp  declaration.cpp  declaration.hpp  expression.cpp  expression.hpp  loop.cpp  loop.hpp  return.cpp  return.hpp
src/super_ast/node/statement/declaration/: function_declaration.cpp  function_declaration.hpp  parameter_declaration.cpp  parameter_declaration.hpp  struct.hpp  struct_declaration.hpp  variable.hpp  variable_declaration.cpp  variable_declaration.hpp
src/super_ast/node/statement/expression/: assignment.hpp  atom.cpp  atom.hpp  binary_operator.cpp  binary_operator.hpp  declaration.hpp  unary_operator.cpp  unary_operator.hpp
src/super_ast/node/statement/expression/atom/: boolean.cpp  boolean.hpp  double.cpp  double.hpp  function_call.cpp  function_call.hpp  identifier.cpp  identifier.hpp  integer.cpp  integer.hpp  not_supported.cpp  not_supported.hpp  string.cpp  string.hpp  tuple.cpp  tuple.hpp
src/super_ast/node/statement/expression/declaration/: function_declaration.cpp  function_declaration.hpp  struct_declaration.cpp  struct_declaration.hpp  variable_declaration.cpp  variable_declaration.hpp
src/super_ast/node/statement/loop/: for.cpp  for.hpp  while.cpp  while.hpp
src/super_ast/parser/: attribute_error.hpp  parse_error.hpp  stream_wrapper.hpp  value_error.hpp
